# estafette

./: .gitignore  .gitlab-ci.yml  3RD-PARTY.md  DEPLOYMENT_README.md  LICENSE  README.md  deploy.py  env.example  example_usage.py  mkdocs.yml  mypy.ini  pyproject.toml  rclone_copy.example  requirements-deploy.txt  requirements.txt  ruff.toml  todos.md
deploy/: __init__.py  cors_configs.py  deploy_script.py  environments.py
dev-tools/: formatting.sh
docs/: examples.md  index.md
docs/api/: config.md  models.md  ovh_examples.md  renderer.md
src/estafettes/: __init__.py
src/estafettes/brevo/: __init__.py  config.py  renderer.py
src/estafettes/ovh/: __init__.py  bucket_manager.py  cli.py  config.py  cors_manager.py  delete_all_buckets.py  file_manager.py  ovh_estafette.py  testing.py  url_generator.py  website_manager.py
stubs/sib_api_v3_sdk/: __init__.pyi  api_client.pyi  configuration.pyi
stubs/sib_api_v3_sdk/api/: __init__.pyi  account_api.pyi  attributes_api.pyi  companies_api.pyi  contacts_api.pyi  conversations_api.pyi  crm_api.pyi  deals_api.pyi  ecommerce_api.pyi  email_campaigns_api.pyi  external_feeds_api.pyi  files_api.pyi  folders_api.pyi  inbound_parsing_api.pyi  lists_api.pyi  (+12 more)
tests/: README.md  __main__.py  _utils.py  template.html  test_brevo_estafette.py  test_deploy_basic.py  test_deploy_cors_only.py  test_deploy_demo.py  test_deploy_working.py  test_ovh_estafette.py  test_ovh_estafette_bucket_list.py  test_ovh_estafette_cli.py  test_ovh_estafette_deploy.py  test_ovh_estafette_file_manager_utils.py  test_ovh_estafette_url_generator.py
(+314 files in other folders)
